--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,34 @@
 .App {
   text-align: center;
-  background-color: lightblue;
+}
+
+.home h1{
+  color: black;
+  background-color: blueviolet;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  background-color: rgb(31, 42, 76);
+  padding-bottom: 1%;
+  
+}
+
+.header h2 {
+  display: flex;
+  justify-content: flex-start;
+  color: white;
+  width: 60%;
+  margin-left: 1%;
+}
+.header-nav {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: 10%;
+  width: 20%;
+}
+
+.link {
+  color: white;
 }
