--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 
 .home h1{
   color: black;
-  background-color: blueviolet;
 }
 
 .header {
@@ -12,6 +11,7 @@
   align-items: center;
   background-color: rgb(31, 42, 76);
   padding-bottom: 1%;
+  margin-bottom: 2%;
   
 }
 
@@ -31,4 +31,18 @@
 
 .link {
   color: white;
+}
+
+.inventory-card {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 2px solid black;
+  margin: 20px;
+  padding: 1%;
+}
+
+.produce-img{
+  width: 20%;
+  
 }
