--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.App {
-  text-align: center;
-}
 
 .home h1{
   color: black;
@@ -46,11 +43,29 @@
   width: 20%;
 }
 
-.signup {
+.signup  {
+display: flex;
+width: 100%;
+
+}
+
+.form, .form1{
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  margin: 3%;
+  margin-left: 20%;
+}
+
+.signup-img {
+  width: 50%;
+}
+
+.signup-img img {
+  width: 100%;
+  height: 80vh;
+}
+
+.form1 h1{
+  margin-left: 70px;
 }
 
 .signup button {
@@ -59,11 +74,13 @@
   border-radius: 12px;
   background-color: rgb(31, 42, 76);
   color: white;
-  margin-left: 45%;
   margin-top: 1%;
+  margin-left: 30px;
 }
 
 .input {
+  display: flex;
+  flex-direction: column;
   margin: 5px;
   width: 250px;
   height: 30px;
